# AXCalib

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AXCalib_Concept_Overview.md  CHANGELOG.md  DECISIONS.md  DESIGN.md  GOAL.md  PROJECT_STATE.md  README.md  RISK_REGISTER.md  WORK_SPEC.md  prep.ps1  pyproject.toml
.github/workflows/: wiki.yml
.memory-bank/: README.md
apps/api/: README.md
apps/web/: README.md
apps/worker/: README.md
config/: axcalib.expert.example.toml  axcalib.toml
config/review_profiles/: axcalib-default-v1.yaml
docs/: HANDOFF.md
docs/adr/: ADR-011-mandatory-hitl-notification.md  ADR-012-stage-retrieval-and-similarity-portion.md  ADR-013-composable-local-pipelines.md  ADR-014-progressive-configuration-and-openapi.md  ADR-015-image-only-pptx-offline-evidence.md  ADR-016-review-policy-and-openai-compatible-evaluator.md  ADR-017-education-program-composition.md  ADR-018-qwen-capability-and-provider-alias.md  ADR-019-json-object-contract-and-multimodal-probe.md  ADR-020-local-project-transaction-journal.md  ADR-021-local-pipeline-execution-and-alpha-cli.md  ADR-022-fail-closed-runtime-api.md  ADR-023-principal-bound-project-api.md  ADR-024-principal-bound-education-api.md  ADR-025-project-read-and-decision-replay.md  (+5 more)
docs/api/: README.md  (+2 more)
evals/: education_lifecycle.py  evidence_quality.py  library_mvp_alpha.py  model_contract_smoke.py  pptx_vertical_slice.py  qwen_capability_contract.py  retrieval_baseline.py  transaction_recovery.py  vector_contract_smoke.py  workflow_smoke.py
examples/: README.md  batch-maintenance.jsonl  catalog.yaml  library_mvp_alpha_quickstart.py
harness/: __init__.py  prep.py  wiki.py
tests/: wiki_ci_contract.py
wiki/: API-Web-App-Integration.md  Architecture-and-Project.md  Configuration-and-On-Prem.md  Development-Process.md  Documentation-Governance.md  Examples-and-Recipes.md  Getting-Started.md  Home.md  Library-Manual.md  On-Prem-Qwen-Verification.md  Security-and-HITL.md  Two-Gate-Tutorial.md  _Sidebar.md  wiki-manifest.json
(+209 files in other folders)
