[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "axcalib"
version = "0.1.0a0"
description = "Evidence-first building blocks for AX certification workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "coverage>=7,<8",
  "pyright>=1.1,<2",
  "pytest>=9,<10",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/axcalib"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "harness", "evals", "tests"]
typeCheckingMode = "standard"
