[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "axcalib"
version = "0.1.0a0"
description = "Evidence-first building blocks for AX certification workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11,<3",
  "ruamel-yaml>=0.18,<1",
]

[project.optional-dependencies]
api = ["fastapi>=0.139,<0.140"]
cli = [
  "rich>=13,<16",
  "typer>=0.16,<1",
]
docling = ["docling>=2.113,<3"]

[project.scripts]
axcalib = "axcalib.cli:main"

[dependency-groups]
dev = [
  "coverage>=7,<8",
  "fastapi>=0.139,<0.140",
  "httpx2>=2.7,<3",
  "pyright>=1.1,<2",
  "python-pptx>=1.0,<2",
  "pytest>=9,<10",
  "rich>=13,<16",
  "ruff>=0.12,<1",
  "typer>=0.16,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/axcalib"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "harness", "evals", "tests"]
typeCheckingMode = "standard"
